--- a/app/src/main/res/layout/statistics_and_chat_layout.xml
+++ b/app/src/main/res/layout/statistics_and_chat_layout.xml
@@ -43,6 +43,7 @@
     </View>
 
     <TextView
+        android:id="@+id/chatView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
