--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLayout"
@@ -84,42 +84,45 @@
                 android:background="@color/grey"
                 android:textSize="18sp"
                 android:layout_marginTop="5dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="8dp"
+                android:text="@string/not_signed_up"
+                android:textSize="18sp"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/register_from_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/register_from_login"
+                android:textSize="18sp"
+                android:textColor="@color/shaded_blue"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/loginWithGoogle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+
+                android:layout_marginTop="15dp"
+                android:text="Or log in with google"
+                android:textSize="18sp"
+                android:textColor="@color/white" />
+
+            <ImageView
+                android:id="@+id/googleImage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+
+                android:layout_marginTop="10dp"
+                android:src="@drawable/google_icon"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="@string/not_signed_up"
-        android:textSize="18sp"
-        android:textColor="@color/white" />
-
-    <TextView
-        android:id="@+id/register_from_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/register_from_login"
-        android:textSize="18sp"
-        android:textColor="@color/shaded_blue"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/loginWithGoogle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Or log in with google"
-        android:textSize="18sp"
-        android:textColor="@color/white" />
-
-    <ImageView
-        android:id="@+id/googleImage"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/google_icon"/>
-
-
-
-</LinearLayout>
+</FrameLayout>
