--- a/app/src/main/res/layout/user_region_settings.xml
+++ b/app/src/main/res/layout/user_region_settings.xml
@@ -1,98 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/userRegionLayoutBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/transparent"
-    android:layout_marginTop="90dp"
-    android:layout_marginBottom="250dp"
-    android:layout_marginStart="50dp"
-    android:layout_marginEnd="50dp">
+    android:background="@color/transparent">
 
-    <androidx.cardview.widget.CardView
+    <FrameLayout
+        android:id="@+id/userRegionLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardCornerRadius="50dp"
-        android:background="@color/white"
-        android:layout_gravity="center">
+        android:layout_marginTop="90dp"
+        android:layout_marginBottom="250dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        tools:ignore="UselessParent">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            app:cardCornerRadius="50dp"
+            android:background="@color/white"
+            android:layout_gravity="center">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="Before we start..."
-                android:textSize="18sp"
-                android:textAlignment="center"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:text="we have to set up a few things to better personalize your experience"
-                android:textSize="16sp"
-                android:textAlignment="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="Before we start..."
+                    android:textSize="18sp"
+                    android:textAlignment="center"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="35dp"
-                android:text="Which country do you reside in?"
-                android:textSize="16sp"
-                android:textAlignment="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:text="we have to set up a few things to better personalize your experience"
+                    android:textSize="16sp"
+                    android:textAlignment="center"/>
 
-            <androidx.appcompat.widget.AppCompatSpinner
-                android:id="@+id/user_region_setting_country"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="35dp"
+                    android:text="Which country do you reside in?"
+                    android:textSize="16sp"
+                    android:textAlignment="center"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"
-                android:text="And which is your preferred currency type?"
-                android:textSize="16sp"
-                android:textAlignment="center"/>
+                <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/userRegionSettingCountry"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginEnd="25dp"/>
 
-            <androidx.appcompat.widget.AppCompatSpinner
-                android:id="@+id/user_region_setting_currency"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginEnd="25dp"
+                    android:text="And which is your preferred currency type?"
+                    android:textSize="16sp"
+                    android:textAlignment="center"/>
 
-            <Button
-                android:id="@+id/user_region_submit_button"
-                android:layout_marginTop="30dp"
-                android:layout_width="125dp"
-                android:layout_height="55dp"
-                android:layout_gravity="center"
-                android:text="Submit"/>
+                <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/userRegionSettingCurrency"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginEnd="25dp"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"
-                android:text="*the data given by the user will be solely used for improving the user experience/ statistics and they can be changed in the settings any time"
-                android:textSize="12sp"
-                android:textAlignment="center"/>
+                <Button
+                    android:id="@+id/userRegionSubmitButton"
+                    android:layout_marginTop="30dp"
+                    android:layout_width="125dp"
+                    android:layout_height="55dp"
+                    android:layout_gravity="center"
+                    android:text="Submit"/>
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginEnd="25dp"
+                    android:text="*the data given by the user will be solely used for improving the user experience/ statistics and they can be changed in the settings any time"
+                    android:textSize="12sp"
+                    android:textAlignment="center"/>
 
-    </androidx.cardview.widget.CardView>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </FrameLayout>
 
 </RelativeLayout>
