--- a/app/src/main/res/layout/fragment_region_settings.xml
+++ b/app/src/main/res/layout/fragment_region_settings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/userRegionLayoutBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Fragments.RegionSettings.RegionSettingsFragment"
     android:background="@color/transparent">
 
     <FrameLayout
@@ -105,4 +105,4 @@
 
     </FrameLayout>
 
-</RelativeLayout>
+</FrameLayout>
