started developing the profile activity for sub-user addition

--- a/app/src/main/res/layout/custom_navigation_drawer.xml
+++ b/app/src/main/res/layout/custom_navigation_drawer.xml
@@ -53,6 +53,7 @@
             android:background="@color/black"/>
 
         <TextView
+            android:id="@+id/profileTextView"
             android:clickable="true"
             android:focusable="true"
             android:layout_width="match_parent"
