--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -73,16 +73,18 @@
                         android:layout_marginStart="15dp"
                         android:layout_gravity="start"
                         android:textSize="20sp"
-                        android:text="ADD_NEW_USER"/>
+                        android:text="Account sub-users"/>
 
                     <Button
                         android:id="@+id/addNewUserButton"
-                        android:layout_width="64dp"
+                        android:layout_width="90dp"
                         android:layout_height="40dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginStart="130dp"
+                        android:layout_marginStart="100dp"
                         android:layout_marginEnd="15dp"
-                        android:src="@color/red"
+                        android:text="Add"
+                        android:textSize="16dp"
+                        android:textAlignment="center"
                         android:layout_toEndOf="@+id/addNewUserText"/>
 
                     <View
