--- a/app/src/main/res/layout/custom_profile_extra_user_recyclerview_item.xml
+++ b/app/src/main/res/layout/custom_profile_extra_user_recyclerview_item.xml
@@ -16,21 +16,21 @@
 
     <EditText
         android:id="@+id/addedUserName"
-        android:layout_width="220dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:hint="Enter a name"
         android:layout_toRightOf="@+id/addedUserNumber"/>
 
     <Button
-        android:id="@+id/addedUserSaveButton"
+        android:id="@+id/addedUserDeleteButton"
         android:layout_width="90dp"
         android:layout_height="45dp"
-        android:layout_marginStart="45dp"
         android:layout_marginEnd="5dp"
-        android:text="Save"
+        android:layout_marginStart="25dp"
+        android:text="X"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@id/addedUserName"/>
 
