--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/midnight_purple"
+    android:background="@drawable/custom_background_image"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
@@ -16,40 +16,39 @@
         android:layout_gravity="center"
         android:layout_margin="30dp"
         app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        android:background="@drawable/custom_edit_test_background">
+        app:cardBackgroundColor="@android:color/transparent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
-            android:padding="24dp"
-            android:background="@color/purple">
+            android:padding="40dp"
+            android:background="@drawable/custom_view_holder">
 
             <TextView
-                android:id="@+id/loginTW"
+                android:id="@+id/appName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 android:textAlignment="center"
-                android:textColor="@color/white"
                 android:textSize="36sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginTop="40dp"
                 android:id="@+id/login_username"
                 android:inputType="text"
-                android:background="@drawable/custom_edit_test_background"
-                android:drawableStart="@drawable/user_dark"
-                android:drawablePadding="8dp"
+                android:background="@drawable/custom_textview_holder_light"
+                android:drawableStart="@drawable/user"
+                android:drawablePadding="15dp"
                 android:hint="@string/user_hint"
-                android:padding="8dp"
+                android:padding="15dp"
                 android:textColor="@color/white"
+                android:textColorHint="@color/white"
                 android:textColorHighlight="@color/purple"
-                android:layout_marginTop="40dp"
                 android:autofillHints="name"/>
 
             <EditText
@@ -57,12 +56,13 @@
                 android:layout_height="50dp"
                 android:id="@+id/login_password"
                 android:inputType="textPassword"
-                android:background="@drawable/custom_edit_test_background"
-                android:drawableStart="@drawable/password_dark"
-                android:drawablePadding="8dp"
+                android:background="@drawable/custom_textview_holder_light"
+                android:drawableStart="@drawable/password"
+                android:drawablePadding="15dp"
                 android:hint="@string/password_hint"
-                android:padding="8dp"
+                android:padding="15dp"
                 android:textColor="@color/black"
+                android:textColorHint="@color/white"
                 android:textColorHighlight="@color/purple"
                 android:layout_marginTop="20dp"
                 android:autofillHints="password"/>
@@ -73,15 +73,16 @@
                 android:layout_height="wrap_content"
                 android:text="@string/remember"
                 android:textSize="18sp"
+                android:textColor="@color/white"
                 android:layout_marginTop="20dp"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="match_parent"
                 android:layout_height="50sp"
                 android:id="@+id/login_btn"
                 android:text="@string/login"
-                android:textColor="@color/white"
-                android:background="@color/grey"
+                android:textColor="@android:color/white"
+                android:background="@drawable/custom_button"
                 android:textSize="18sp"
                 android:layout_marginTop="5dp"/>
 
@@ -89,29 +90,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="5dp"
                 android:padding="8dp"
                 android:text="@string/not_signed_up"
                 android:textSize="18sp"
                 android:textColor="@color/white" />
 
             <TextView
-                android:id="@+id/register_from_login"
+                android:id="@+id/registerFromLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/register_from_login"
                 android:textSize="18sp"
-                android:textColor="@color/shaded_blue"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/loginWithGoogle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-
-                android:layout_marginTop="15dp"
-                android:text="Or log in with google"
+                android:layout_marginTop="10dp"
+                android:text="Or log in with Google"
                 android:textSize="18sp"
                 android:textColor="@color/white" />
 
@@ -120,8 +120,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:src="@drawable/google_icon"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
