--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,22 +9,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/dark_gery">
+        android:background="@drawable/custom_background_image">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/grey"
+            android:gravity="center"
+            android:background="@android:color/transparent"
             app:contentInsetStart="0dp"/>
-
-        <include layout="@layout/dashboard"
-            android:id="@+id/dashboard"
-            android:layout_width="290dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="90dp"
-            android:layout_centerHorizontal="true" />
 
         <include layout="@layout/applist_main"
             android:id="@+id/applist_main"
@@ -35,14 +28,24 @@
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"/>
 
-        <Button
+        <include layout="@layout/dashboard"
+            android:id="@+id/dashboard"
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="90dp"
+            android:layout_centerHorizontal="true" />
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/expandButton"
             android:layout_width="120dp"
             android:layout_height="55dp"
+            android:layout_marginTop="385dp"
             android:text="Expand"
             android:textSize="16sp"
+            android:textColor="@android:color/white"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="385dp"/>
+            android:background="@drawable/custom_button"/>
 
     </RelativeLayout>
 
