--- a/app/src/main/res/layout/applist_main.xml
+++ b/app/src/main/res/layout/applist_main.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="350dp"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:layout_centerInParent="true"
-    app:cardCornerRadius="50dp"
-    app:cardElevation="0dp"
-    app:cardBackgroundColor="@color/grey">
+    android:background="@drawable/custom_view_holder">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/appListCardOne"
@@ -32,11 +30,10 @@
         android:rowCount="2"
         android:layout_marginTop="260dp"
         android:layout_marginBottom="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true">
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp">
 
-        <!-- CardView 3 -->
-        <androidx.cardview.widget.CardView
+        <FrameLayout
             android:id="@+id/appListCardThree"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -44,7 +41,7 @@
             android:layout_rowWeight="1"
             android:layout_gravity="fill"
             android:layout_margin="8dp"
-            app:cardCornerRadius="35dp">
+            android:background="@drawable/custom_view_holder_3">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -53,10 +50,9 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_gravity="center"/>
-        </androidx.cardview.widget.CardView>
+        </FrameLayout>
 
-        <!-- CardView 4 -->
-        <androidx.cardview.widget.CardView
+        <FrameLayout
             android:id="@+id/appListCardFour"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -64,7 +60,7 @@
             android:layout_rowWeight="1"
             android:layout_gravity="fill"
             android:layout_margin="8dp"
-            app:cardCornerRadius="35dp">
+            android:background="@drawable/custom_view_holder_4">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -73,10 +69,9 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_gravity="center"/>
-        </androidx.cardview.widget.CardView>
+        </FrameLayout>
 
-        <!-- CardView 5 -->
-        <androidx.cardview.widget.CardView
+        <FrameLayout
             android:id="@+id/appListCarFive"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -84,7 +79,7 @@
             android:layout_rowWeight="1"
             android:layout_gravity="fill"
             android:layout_margin="8dp"
-            app:cardCornerRadius="35dp">
+            android:background="@drawable/custom_view_holder_3">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -93,10 +88,9 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_gravity="center"/>
-        </androidx.cardview.widget.CardView>
+        </FrameLayout>
 
-        <!-- CardView 6 -->
-        <androidx.cardview.widget.CardView
+        <FrameLayout
             android:id="@+id/appListCardSix"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -104,19 +98,19 @@
             android:layout_rowWeight="1"
             android:layout_gravity="fill"
             android:layout_margin="8dp"
-            app:cardCornerRadius="35dp">
+            android:background="@drawable/custom_view_holder_4">
 
             <TextView
                 android:id="@+id/appListExchangeOptionTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Currency exchange and rates"
+                android:text="Exchange"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
                 android:layout_gravity="center"/>
-        </androidx.cardview.widget.CardView>
+        </FrameLayout>
 
     </GridLayout>
 
-</androidx.cardview.widget.CardView>
+</FrameLayout>
