--- a/app/src/main/res/layout/statistics_and_chat_layout.xml
+++ b/app/src/main/res/layout/statistics_and_chat_layout.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/statistics_and_chat_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/custom_view_holder_2">
 
     <TextView
         android:layout_width="match_parent"
@@ -16,38 +18,38 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp">
 
         <TextView
             android:id="@+id/estimatedExpenseTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="25dp"
             android:text="Estimated expenses"
             android:textSize="16sp"/>
 
         <androidx.appcompat.widget.AppCompatSpinner
             android:layout_width="230dp"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/estimatedExpenseTextView"
-            android:layout_marginStart="25sp"/>
+            android:layout_toEndOf="@+id/estimatedExpenseTextView"/>
 
     </RelativeLayout>
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="310dp"
         android:layout_height="5dp"
         android:layout_marginTop="85dp"
         android:layout_marginBottom="5dp"
-        android:background="@color/midnight_purple">
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/custom_view_holder">
     </View>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginBottom="5dp">
+        android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/chat_relative_layout"
@@ -58,9 +60,10 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <androidx.cardview.widget.CardView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp">
 
         <EditText
             android:id="@+id/userMessageInput"
@@ -68,20 +71,22 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="105dp"
+            android:layout_gravity="center_vertical"
             android:inputType="text"
             android:hint="Start typing here..."
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/sendUserMessageInput"
             android:layout_width="85dp"
             android:layout_height="45dp"
             android:layout_marginEnd="5dp"
             android:layout_gravity="end"
             android:text="Send"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:background="@drawable/custom_button"/>
 
 
-    </androidx.cardview.widget.CardView>
+    </FrameLayout>
 </LinearLayout>
